adds ai list admin
